@@ -5,7 +5,10 @@ ChangeLog
 
 SVN TRUNK
 
-- LV2 .ttl file fix re. GEN1_GROUP, GEN1_COARSE index order.
+- Fixed a current element switching bug (via GUI) which was confusing
+  the (stereo)width, panning and volume settings effect from previous
+  selected elements. (TESTING)
+- Fixed LV2 .ttl file index order (re. GEN1_GROUP, GEN1_COARSE).
 
 
 0.3.2  2012-03-01  One third bug-fix release.
